src/resolver/snapshots/rv__resolver__tests__multi-repo-combination-suggests-failure.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
slurmtools=0.1.2 (repository(url: http://a2-ai-universe/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
brio=1.1.5 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
dplyr=1.1.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
fs=1.6.5 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
glue=1.8.0 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
jsonlite=1.8.9 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
processx=3.8.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
purrr=1.0.2 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
rlang=1.1.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
tibble=3.2.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
whisker=0.4.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
withr=3.0.2 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
here=1.0.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
cli=3.6.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
stringi=1.8.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
hms=1.1.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
lifecycle=1.0.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
knitr=1.49 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
rmarkdown=2.29 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
testthat=3.2.2 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
generics=0.1.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
magrittr=2.0.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
pillar=1.9.0 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
R6=2.5.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
tidyselect=1.2.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
vctrs=0.6.5 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
ps=1.8.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
fansi=1.0.6 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
pkgconfig=2.0.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
rprojroot=2.0.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
evaluate=1.0.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
highr=0.11 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
xfun=0.49 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
yaml=2.3.10 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
bslib=0.8.0 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
fontawesome=0.5.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
htmltools=0.5.8.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
jquerylib=0.1.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
tinytex=0.54 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
callr=3.7.6 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
desc=1.4.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
digest=0.6.37 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
pkgload=1.4.0 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
praise=1.0.0 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
waldo=0.6.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
utf8=1.2.4 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
base64enc=0.1-3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
cachem=1.1.0 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
fastmap=1.2.0 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
memoise=2.0.1 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
mime=0.12 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
sass=0.4.9 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
pkgbuild=1.4.5 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
diffobj=0.3.5 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
rappdirs=0.3.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
crayon=1.5.3 (repository(url: http://p3m/), type=binary, path='', from_lockfile=false, from_remote=false, env_vars=[])
--- unresolved --- 
bbr [required by: slurmtools]
