src/resolver/snapshots/rv__resolver__tests__needs_complex_upgrade.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
rv.needs.B=2.0.0 (repository(url: http://needs-complex-repo1/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
rv.needs.A=2.0.0 (repository(url: http://needs-complex-repo2/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
