src/resolver/snapshots/rv__resolver__tests__needs_remote_override.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
rv_needs_remote_override=1.0.0 (git(url: https://github.com/test/rv-needs-remote-override, sha: somethinglikeasha, directory: None, tag: None, branch: None), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
gsm=2.2.2 (repository(url: http://cran/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
