src/resolver/snapshots/rv__resolver__tests__needs_upgrade.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
needsB=1.0.0 (repository(url: http://test_repo1/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
needsA=2.0.0 (repository(url: http://test_repo2/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
