src/resolver/snapshots/rv__resolver__tests__needs_ver_req_fail.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
rv.needs=1.0.0 (git(url: https://github.com/test/rv.needs, sha: somethinglikeasha, directory: None, tag: None, branch: None), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
--- unresolved --- 
knitr (>= 1.46)  [required by: rv.needs]
