src/resolver/snapshots/rv__resolver__tests__needs_with_lockfile.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
rv.needs=1.0.0 (git(url: https://github.com/test/rv.needs, sha: somethinglikeasha, directory: None, tag: None, branch: None), type=source, path='', from_lockfile=true, from_remote=false, env_vars=[])
knitr=1.45 (repository(url: http://cran/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
rmarkdown=2.25 (repository(url: http://cran/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
