src/resolver/snapshots/rv__resolver__tests__r_universe_lockfile.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
osinfo=0.0.1 (runiverse(repo: http://r-universe.dev, url: https://github.com/a2-ai/osinfo, sha: f815095b7b04cbf57da0e0c0a55ef5e03c16f477, directory: None), type=binary, path='', from_lockfile=true, from_remote=false)
